--- a/Core/Core/Features/Todos/TodoListViewController.storyboard
+++ b/Core/Core/Features/Todos/TodoListViewController.storyboard
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="23727" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23721"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -19,11 +18,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="k4y-uG-qv2">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="U1Y-MR-vcH" customClass="ListBackgroundView" customModule="Core">
-                                    <rect key="frame" x="0.0" y="160" width="375" height="274"/>
+                                    <rect key="frame" x="0.0" y="188" width="375" height="274"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMinY="YES" flexibleMaxY="YES"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PHz-NU-Zyf" customClass="CircleProgressView" customModule="Core">
@@ -112,10 +111,10 @@
                                 </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TodoListCell" id="hCw-Fp-iyM" customClass="TodoListCell" customModule="Core" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="44.5" width="375" height="93"/>
+                                        <rect key="frame" x="0.0" y="50" width="375" height="110"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="hCw-Fp-iyM" id="7eq-ZE-t86">
-                                            <rect key="frame" x="0.0" y="0.0" width="350.5" height="93"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="348.5" height="110"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MW1-Eb-WpI" customClass="AccessIconView" customModule="Core" customModuleProvider="target">
@@ -126,7 +125,7 @@
                                                     </constraints>
                                                 </view>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="U2n-c2-O8j">
-                                                    <rect key="frame" x="58" y="8" width="292.5" height="76.5"/>
+                                                    <rect key="frame" x="58" y="8" width="290.5" height="93.5"/>
                                                     <subviews>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CCD" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SWv-rD-ELQ" customClass="DynamicLabel" customModule="Core" customModuleProvider="target">
                                                             <rect key="frame" x="0.0" y="0.0" width="30.5" height="17"/>
@@ -143,8 +142,17 @@
                                                                 <userDefinedRuntimeAttribute type="string" keyPath="textColorName" value="textDarkest"/>
                                                             </userDefinedRuntimeAttributes>
                                                         </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Chechkpoint name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000001192092896" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Va1-lu-Z0u" customClass="DynamicLabel" customModule="Core" customModuleProvider="target">
+                                                            <rect key="frame" x="0.0" y="36.5" width="124.5" height="17"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                            <userDefinedRuntimeAttributes>
+                                                                <userDefinedRuntimeAttribute type="string" keyPath="textColorName" value="textDark"/>
+                                                            </userDefinedRuntimeAttributes>
+                                                        </label>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Due: Dec 25 at 8:00 AM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.80000000000000004" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HaY-ly-gXA" customClass="DynamicLabel" customModule="Core" customModuleProvider="target">
-                                                            <rect key="frame" x="0.0" y="36.5" width="158.5" height="17"/>
+                                                            <rect key="frame" x="0.0" y="53.5" width="158.5" height="17"/>
                                                             <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -153,14 +161,14 @@
                                                             </userDefinedRuntimeAttributes>
                                                         </label>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="15G-Hp-Vkb" userLabel="Spacer">
-                                                            <rect key="frame" x="0.0" y="53.5" width="240" height="5"/>
+                                                            <rect key="frame" x="0.0" y="70.5" width="240" height="5"/>
                                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="height" constant="5" id="LNd-Co-W0W"/>
                                                             </constraints>
                                                         </view>
                                                         <view contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" translatesAutoresizingMaskIntoConstraints="NO" id="cep-81-X0A">
-                                                            <rect key="frame" x="0.0" y="58.5" width="104" height="18"/>
+                                                            <rect key="frame" x="0.0" y="75.5" width="104" height="18"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="1000" verticalHuggingPriority="1000" verticalCompressionResistancePriority="749" text="1 NEEDS GRADING" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UL4-0K-t6Y" customClass="DynamicLabel" customModule="Core" customModuleProvider="target">
                                                                     <rect key="frame" x="6" y="3" width="92" height="12"/>
@@ -195,6 +203,7 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="accessIconView" destination="MW1-Eb-WpI" id="MXl-CE-zKL"/>
+                                            <outlet property="checkpointLabel" destination="Va1-lu-Z0u" id="n9f-KL-scb"/>
                                             <outlet property="contextLabel" destination="SWv-rD-ELQ" id="UxX-da-num"/>
                                             <outlet property="needsGradingLabel" destination="UL4-0K-t6Y" id="ZcU-Im-Y24"/>
                                             <outlet property="needsGradingSpacer" destination="15G-Hp-Vkb" id="czM-Pj-DNg"/>
@@ -233,33 +242,10 @@
             <point key="canvasLocation" x="49" y="86"/>
         </scene>
     </scenes>
-    <designables>
-        <designable name="HaY-ly-gXA">
-            <size key="intrinsicContentSize" width="158.5" height="17"/>
-        </designable>
-        <designable name="SWv-rD-ELQ">
-            <size key="intrinsicContentSize" width="30.5" height="17"/>
-        </designable>
-        <designable name="UL4-0K-t6Y">
-            <size key="intrinsicContentSize" width="92" height="12"/>
-        </designable>
-        <designable name="WMd-rO-dfd">
-            <size key="intrinsicContentSize" width="168" height="190"/>
-        </designable>
-        <designable name="WxB-5E-dEn">
-            <size key="intrinsicContentSize" width="136" height="19.5"/>
-        </designable>
-        <designable name="ZzK-Kq-KuF">
-            <size key="intrinsicContentSize" width="100.5" height="24"/>
-        </designable>
-        <designable name="mSV-f4-ePE">
-            <size key="intrinsicContentSize" width="300.5" height="19.5"/>
-        </designable>
-    </designables>
     <resources>
         <image name="PandaSleeping" width="168" height="190"/>
         <namedColor name="textInfo">
-            <color red="0.0" green="0.55686274509803924" blue="0.88627450980392153" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.16862745098039217" green="0.47843137254901963" blue="0.73725490196078436" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
